force-app/main/default/objects/StnryAssetEnvrSrc/fields/CreatedByInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>CreatedByInUrjanet__c</fullName>
    <description
    >A custom field for the system user responsible for creating the site in Arcadia&apos;s system.</description>
    <inlineHelpText>The system user responsible for creating the site in Arcadia&apos;s system.</inlineHelpText>
    <label>Created By in Arcadia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>