force-app/main/default/objects/StnryAssetEnvrSrc/fields/CreatedDateInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateInUrjanet__c</fullName>
    <description>A custom field for the date the site was created in Arcadia&apos;s system.</description>
    <inlineHelpText>The date the site was created in Arcadia&apos;s system.</inlineHelpText>
    <label>Created Date in Arcadia</label>
    <type>DateTime</type>
</CustomField>