force-app/main/default/objects/StnryAssetEnvrSrc/fields/LastModifiedByInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByInUrjanet__c</fullName>
    <description>A custom field to store the system user responsible for modifying the site most recently.</description>
    <inlineHelpText>The system user responsible for modifying the site most recently.</inlineHelpText>
    <label>Last Modified By in Arcadia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>