force-app/main/default/objects/StnryAssetEnvrSrc/fields/LastModifiedInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedInUrjanet__c</fullName>
    <description
    >A custom field to store the date that the site was last modified in Arcadia&apos;s system.</description>
    <inlineHelpText>The date that the site was last modified in Arcadia&apos;s system.</inlineHelpText>
    <label>Last Modified in Arcadia</label>
    <type>DateTime</type>
</CustomField>