force-app/main/default/objects/StnryAssetEnvrSrc/fields/UrjanetId__c.field-meta.xml
<CustomField>
    <fullName>UrjanetId__c</fullName>
    <description
    >A custom field to store the Arcadia ID to make recredentialing and other API calls easier.</description>
    <externalId>true</externalId>
    <inlineHelpText
    >A custom field to store the Arcadia ID to make recredentialing and other API calls easier.</inlineHelpText>
    <label>ArcadiaId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>