force-app/main/default/objects/StnryAssetEnvrSrc/fields/UrjanetSiteCode__c.field-meta.xml
<CustomField>
    <fullName>UrjanetSiteCode__c</fullName>
    <description
    >A custom field to store the Site Code field from Arcadia. This is an optional custom field in the Arcadia system.</description>
    <inlineHelpText>The site code as entered in the optional custom field in the Arcadia system.</inlineHelpText>
    <label>Arcadia Site Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>