force-app/main/default/objects/StnryAssetEnvrSrc/fields/UrjanetSiteNumber__c.field-meta.xml
<CustomField>
    <fullName>UrjanetSiteNumber__c</fullName>
    <description
    >A custom field to store the Site Number field from Arcadia. This is an optional custom field in the Arcadia system.</description>
    <inlineHelpText>The site number as entered in the optional custom field in the Arcadia system.</inlineHelpText>
    <label>Arcadia Site Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>