force-app/main/default/objects/StnryAssetEnvrSrc/fields/UrjanetSubRegion__c.field-meta.xml
<CustomField>
    <fullName>UrjanetSubRegion__c</fullName>
    <description>An optional custom field in the Arcadia system to input site’s sub region.</description>
    <inlineHelpText>An optional custom field in the Arcadia system to input site’s sub region.</inlineHelpText>
    <label>Arcadia subRegion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>