force-app/main/default/objects/StnryAssetEnvrSrc/fields/UtilityAccount__c.field-meta.xml
<CustomField>
    <fullName>UtilityAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To relate this Stationary Asset Environmental Source to a Utility Account</description>
    <inlineHelpText>To relate this Stationary Asset Environmental Source to a Utility Account</inlineHelpText>
    <label>Utility Account</label>
    <referenceTo>UtilityAccount__c</referenceTo>
    <relationshipLabel>Stationary Asset Environmental Sources</relationshipLabel>
    <relationshipName>Stationary_Asset_Environmental_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>